--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
     <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <!-- <parent> -->
-        <!-- <groupId>com.github.cafapi</groupId> -->
-        <!-- <artifactId>UXAspects</artifactId> -->
-        <!-- <version>1.13.0-150</version> -->
-    <!-- </parent> -->
+    <parent>
+        <groupId>com.github.cafapi</groupId>
+        <artifactId>UXAspects</artifactId>
+        <version>1.13.0-150</version>
+    </parent>
 
     <name>UX Aspects documentation</name>
     <description>Runs Protractor tests against UX Aspects using headless Chrome.</description>
