--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <parent>
         <groupId>com.github.cafapi</groupId>
-        <artifactId>UXAspects</artifactId>
+        <artifactId>caf-parent</artifactId>
         <version>1.13.0-150</version>
     </parent>
 
