--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>UXAspects</groupId>
+    <groupId>com.github.UXAspects</groupId>
     <artifactId>UXAspects</artifactId>       
     <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>com.github.cafapi</groupId>
-        <artifactId>caf-parent</artifactId>
-        <version>1.13.0-150</version>
+        <artifactId>caf-common</artifactId>
+        <version>1.12.0-232</version>
     </parent>
 
     <name>UX Aspects documentation</name>
