--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.UXAspects</groupId>
-    <artifactId>UXAspects</artifactId>       
+    <artifactId>ux-aspects</artifactId>       
     <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
